--- a/Pierre-Papier-Ciseau avec Gwonam.css
+++ b/Pierre-Papier-Ciseau avec Gwonam.css
@@ -1,563 +1,87 @@
-@font-face {
-	font-family: "Enchanted Land";
-	src: url('Enchanted Land.otf')format('truetype');
-	font-weight:normal;
-	font-style:normal;
-	}
-
+@import url("https://fonts.googleapis.com/css?family=Marck+Script&display=swap");
 body {
-background-color:#e98815;
-font-family: "Enchanted Land";
-src: url('Enchanted Land.otf') format('truetype');
-font-weight:normal;
-font-style:normal;
-font-size:2em;
-background-image:url(fond_parchemin.png);
-cursor:url('gwonam_curseur.cur'), auto;
+  background-color: #e98815;
+  font-family: 'Marck Script', cursive;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 1.1rem;
+  height: 100vh;
+  background-image: url(https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/89b8e4ba-2c52-44b5-b4c6-963c82fe1812/dctg6uv-ebac2377-9f25-4705-88e7-96cd325c6700.png);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: none;
+  margin: auto auto;
+  width: 100vw;
+  overflow: hidden;
 }
 
-
-	
-.button {
-	   display: inline-block;
-	   color:#6b0000 ;
-	   text-shadow:3px 3px 2px 2px black;
-		}
-	
-
-.button:hover{
-  animation: BUTTON linear 0.8s;
-  animation-iteration-count: 1;
-  transform-origin: 50% 50%;
-  -webkit-animation: BUTTON linear 0.8s;
-  -webkit-animation-iteration-count: 1;
-  -webkit-transform-origin: 50% 50%;
-  -moz-animation: BUTTON linear 0.8s;
-  -moz-animation-iteration-count: 1;
-  -moz-transform-origin: 50% 50%;
-  -o-animation: BUTTON linear 0.8s;
-  -o-animation-iteration-count: 1;
-  -o-transform-origin: 50% 50%;
-  -ms-animation: BUTTON linear 0.8s;
-  -ms-animation-iteration-count: 1;
-  -ms-transform-origin: 50% 50%;
-   display: inline-block;
+body main {
+  position: absolute;
+  top: 10vh;
+  width: 100%;
+  margin: auto auto;
 }
 
-@keyframes BUTTON{
-  0% {
-    transform:  translate(0px,0px)  ;
-  }
-  15% {
-    transform:  translate(0px,-25px)  ;
-  }
-  30% {
-    transform:  translate(0px,0px)  ;
-  }
-  45% {
-    transform:  translate(0px,-15px)  ;
-  }
-  60% {
-    transform:  translate(0px,0px)  ;
-  }
-  75% {
-    transform:  translate(0px,-5px)  ;
-  }
-  100% {
-    transform:  translate(0px,0px)  ;
-  }
+body main section {
+  margin: auto auto;
+  text-align: center;
+  display: block;
 }
 
-@-moz-keyframes BUTTON{
-  0% {
-    -moz-transform:  translate(0px,0px)  ;
-  }
-  15% {
-    -moz-transform:  translate(0px,-25px)  ;
-  }
-  30% {
-    -moz-transform:  translate(0px,0px)  ;
-  }
-  45% {
-    -moz-transform:  translate(0px,-15px)  ;
-  }
-  60% {
-    -moz-transform:  translate(0px,0px)  ;
-  }
-  75% {
-    -moz-transform:  translate(0px,-5px)  ;
-  }
-  100% {
-    -moz-transform:  translate(0px,0px)  ;
-  }
+body main section .histoire {
+  color: #6b0000;
+  text-shadow: 3px 3px 2px 2px black;
+  margin: auto;
+  width: 80vh;
 }
 
-@-webkit-keyframes BUTTON {
-  0% {
-    -webkit-transform:  translate(0px,0px)  ;
-  }
-  15% {
-    -webkit-transform:  translate(0px,-25px)  ;
-  }
-  30% {
-    -webkit-transform:  translate(0px,0px)  ;
-  }
-  45% {
-    -webkit-transform:  translate(0px,-15px)  ;
-  }
-  60% {
-    -webkit-transform:  translate(0px,0px)  ;
-  }
-  75% {
-    -webkit-transform:  translate(0px,-5px)  ;
-  }
-  100% {
-    -webkit-transform:  translate(0px,0px)  ;
-  }
+body main section .jeu #block-jeu {
+  display: block;
 }
 
-@-o-keyframes BUTTON {
-  0% {
-    -o-transform:  translate(0px,0px)  ;
-  }
-  15% {
-    -o-transform:  translate(0px,-25px)  ;
-  }
-  30% {
-    -o-transform:  translate(0px,0px)  ;
-  }
-  45% {
-    -o-transform:  translate(0px,-15px)  ;
-  }
-  60% {
-    -o-transform:  translate(0px,0px)  ;
-  }
-  75% {
-    -o-transform:  translate(0px,-5px)  ;
-  }
-  100% {
-    -o-transform:  translate(0px,0px)  ;
-  }
+body main section .jeu #block-jeu .button {
+  display: inline-block;
+  color: #6b0000;
+  text-shadow: 3px 3px 2px 2px black;
+  cursor: none !important;
 }
 
-@-ms-keyframes BUTTON {
-  0% {
-    -ms-transform:  translate(0px,0px)  ;
-  }
-  15% {
-    -ms-transform:  translate(0px,-25px)  ;
-  }
-  30% {
-    -ms-transform:  translate(0px,0px)  ;
-  }
-  45% {
-    -ms-transform:  translate(0px,-15px)  ;
-  }
-  60% {
-    -ms-transform:  translate(0px,0px)  ;
-  }
-  75% {
-    -ms-transform:  translate(0px,-5px)  ;
-  }
-  100% {
-    -ms-transform:  translate(0px,0px)  ;
-  }
+body main section .jeu #block-jeu .button button {
+  width: 13vw;
+  height: 13vw;
 }
 
-
-
-
-
-.LogoAnimation:hover{
-  animation: logoanimation linear 4s;
-  animation-iteration-count: infinite;
-  transform-origin: 50% 50%;
-  -webkit-animation: logoanimation linear 4s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-transform-origin: 50% 50%;
-  -moz-animation: logoanimation linear 4s;
-  -moz-animation-iteration-count: infinite;
-  -moz-transform-origin: 50% 50%;
-  -o-animation: logoanimation linear 4s;
-  -o-animation-iteration-count: infinite;
-  -o-transform-origin: 50% 50%;
-  -ms-animation: logoanimation linear 4s;
-  -ms-animation-iteration-count: infinite;
-  -ms-transform-origin: 50% 50%;
+body main section .jeu #block-jeu .button button img {
+  width: 13vw;
+  height: 13vw;
 }
 
-@keyframes logoanimation{
-  0% {
-    transform:  translate(0px,0px)  rotate(0deg) ;
-  }
-  20% {
-    transform:  translate(0px,0px)  rotate(45deg) ;
-  }
-  50% {
-    transform:  translate(1px,1px)  rotate(0deg) ;
-  }
-  80% {
-    transform:  translate(1px,1px)  rotate(-45deg) ;
-  }
-  100% {
-    transform:  translate(1px,1px)  rotate(0deg) ;
-  }
+body main section .jeu #block-jeu .button:hover {
+  display: inline-block;
+  cursor: none !important;
 }
 
-@-moz-keyframes logoanimation{
-  0% {
-    -moz-transform:  translate(0px,0px)  rotate(0deg) ;
-  }
-  20% {
-    -moz-transform:  translate(0px,0px)  rotate(45deg) ;
-  }
-  50% {
-    -moz-transform:  translate(1px,1px)  rotate(0deg) ;
-  }
-  80% {
-    -moz-transform:  translate(1px,1px)  rotate(-45deg) ;
-  }
-  100% {
-    -moz-transform:  translate(1px,1px)  rotate(0deg) ;
-  }
+.affiche {
+  font-family: 'Courier New', Courier, monospace;
 }
 
-@-webkit-keyframes logoanimation {
-  0% {
-    -webkit-transform:  translate(0px,0px)  rotate(0deg) ;
-  }
-  20% {
-    -webkit-transform:  translate(0px,0px)  rotate(45deg) ;
-  }
-  50% {
-    -webkit-transform:  translate(1px,1px)  rotate(0deg) ;
-  }
-  80% {
-    -webkit-transform:  translate(1px,1px)  rotate(-45deg) ;
-  }
-  100% {
-    -webkit-transform:  translate(1px,1px)  rotate(0deg) ;
-  }
+.result {
+  font-family: 'Marck Script', cursive;
 }
 
-@-o-keyframes logoanimation {
-  0% {
-    -o-transform:  translate(0px,0px)  rotate(0deg) ;
-  }
-  20% {
-    -o-transform:  translate(0px,0px)  rotate(45deg) ;
-  }
-  50% {
-    -o-transform:  translate(1px,1px)  rotate(0deg) ;
-  }
-  80% {
-    -o-transform:  translate(1px,1px)  rotate(-45deg) ;
-  }
-  100% {
-    -o-transform:  translate(1px,1px)  rotate(0deg) ;
-  }
+.recommencer {
+  font-family: 'Marck Script', cursive;
+  width: 30%;
+  background: #6b0000;
+  color: #e98815;
+  font-size: 2rem;
 }
 
-@-ms-keyframes logoanimation {
-  0% {
-    -ms-transform:  translate(0px,0px)  rotate(0deg) ;
-  }
-  20% {
-    -ms-transform:  translate(0px,0px)  rotate(45deg) ;
-  }
-  50% {
-    -ms-transform:  translate(1px,1px)  rotate(0deg) ;
-  }
-  80% {
-    -ms-transform:  translate(1px,1px)  rotate(-45deg) ;
-  }
-  100% {
-    -ms-transform:  translate(1px,1px)  rotate(0deg) ;
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.Gwonam{
-	width: 250px;
-height: 250px;
-margin:auto;
-position:absolute;
-float:left;
-bottom:0;
-left:0;
-  animation: gwonam linear 20s;
-  animation-iteration-count: infinite;
-  transform-origin: 50% 50%;
-  -webkit-animation: gwonam linear 20s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-transform-origin: 50% 50%;
-  -moz-animation: gwonam linear 20s;
-  -moz-animation-iteration-count: infinite;
-  -moz-transform-origin: 50% 50%;
-  -o-animation: gwonam linear 20s;
-  -o-animation-iteration-count: infinite;
-  -o-transform-origin: 50% 50%;
-  -ms-animation: gwonam linear 20s;
-  -ms-animation-iteration-count: infinite;
-  -ms-transform-origin: 50% 50%;
-}
-
-@keyframes gwonam{
-  0% {
-    transform:  translate(0px,0px)  rotate(0deg) scaleX(1.00) scaleY(0.99) skewX(0deg) skewY(0deg) ;
-  }
-  5% {
-    transform:  translate(56px,-24px)  rotate(23deg) skewX(1deg) skewY(0deg) ;
-  }
-  10% {
-    transform:  translate(114px,0px)  rotate(46deg) skewX(3deg) skewY(4deg) ;
-  }
-  15% {
-    transform:  translate(173px,-48px)  rotate(68deg) skewX(4deg) skewY(6deg) ;
-  }
-  20% {
-    transform:  translate(228px,2px)  rotate(91deg) skewX(5deg) skewY(8deg) ;
-  }
-  25% {
-    transform:  translate(285px,-49px)  rotate(114deg) skewX(7deg) skewY(10deg) ;
-  }
-  30% {
-    transform:  translate(337px,-3px)  rotate(137deg) skewX(8deg) skewY(12deg) ;
-  }
-  35% {
-    transform:  translate(387px,-47px)  rotate(160deg) skewX(9deg) skewY(14deg) ;
-  }
-  40% {
-    transform:  translate(414px,-24px)  rotate(182deg) skewX(11deg) skewY(16deg) ;
-  }
-  45% {
-    transform:  translate(441px,-1px)  rotate(205deg) skewX(12deg) skewY(18deg) ;
-  }
-  50% {
-    transform:  translate(492px,-49px)  rotate(228deg) skewX(13deg) skewY(20deg) ;
-  }
-  65% {
-    transform:  translate(492px,-49px)  rotate(0deg) scaleX(0.00) scaleY(0.00) skewX(0deg) skewY(26deg) ;
-  }
-  65% {
-    transform:  translate(492px,-49px)  rotate(296deg) skewX(17deg) skewY(26deg) ;
-  }
-  79% {
-    transform:  translate(0px,0px)  rotate(360deg) scaleY(0.00) skewX(21deg) skewY(33deg) ;
-  }
-  100% {
-    transform:  translate(0px,0px)  rotate(360deg) scaleX(0.00) scaleY(0.00) skewX(0deg) skewY(0deg) ;
-  }
-}
-
-@-moz-keyframes gwonam{
-  0% {
-    -moz-transform:  translate(0px,0px)  rotate(0deg) scaleX(1.00) scaleY(0.99) skewX(0deg) skewY(0deg) ;
-  }
-  5% {
-    -moz-transform:  translate(56px,-24px)  rotate(23deg) skewX(1deg) skewY(0deg) ;
-  }
-  10% {
-    -moz-transform:  translate(114px,0px)  rotate(46deg) skewX(3deg) skewY(4deg) ;
-  }
-  15% {
-    -moz-transform:  translate(173px,-48px)  rotate(68deg) skewX(4deg) skewY(6deg) ;
-  }
-  20% {
-    -moz-transform:  translate(228px,2px)  rotate(91deg) skewX(5deg) skewY(8deg) ;
-  }
-  25% {
-    -moz-transform:  translate(285px,-49px)  rotate(114deg) skewX(7deg) skewY(10deg) ;
-  }
-  30% {
-    -moz-transform:  translate(337px,-3px)  rotate(137deg) skewX(8deg) skewY(12deg) ;
-  }
-  35% {
-    -moz-transform:  translate(387px,-47px)  rotate(160deg) skewX(9deg) skewY(14deg) ;
-  }
-  40% {
-    -moz-transform:  translate(414px,-24px)  rotate(182deg) skewX(11deg) skewY(16deg) ;
-  }
-  45% {
-    -moz-transform:  translate(441px,-1px)  rotate(205deg) skewX(12deg) skewY(18deg) ;
-  }
-  50% {
-    -moz-transform:  translate(492px,-49px)  rotate(228deg) skewX(13deg) skewY(20deg) ;
-  }
-  65% {
-    -moz-transform:  translate(492px,-49px)  rotate(0deg) scaleX(0.00) scaleY(0.00) skewX(0deg) skewY(26deg) ;
-  }
-  65% {
-    -moz-transform:  translate(492px,-49px)  rotate(296deg) skewX(17deg) skewY(26deg) ;
-  }
-  79% {
-    -moz-transform:  translate(0px,0px)  rotate(360deg) scaleY(0.00) skewX(21deg) skewY(33deg) ;
-  }
-  100% {
-    -moz-transform:  translate(0px,0px)  rotate(360deg) scaleX(0.00) scaleY(0.00) skewX(0deg) skewY(0deg) ;
-  }
-}
-
-@-webkit-keyframes gwonam {
-  0% {
-    -webkit-transform:  translate(0px,0px)  rotate(0deg) scaleX(1.00) scaleY(0.99) skewX(0deg) skewY(0deg) ;
-  }
-  5% {
-    -webkit-transform:  translate(56px,-24px)  rotate(23deg) skewX(1deg) skewY(0deg) ;
-  }
-  10% {
-    -webkit-transform:  translate(114px,0px)  rotate(46deg) skewX(3deg) skewY(4deg) ;
-  }
-  15% {
-    -webkit-transform:  translate(173px,-48px)  rotate(68deg) skewX(4deg) skewY(6deg) ;
-  }
-  20% {
-    -webkit-transform:  translate(228px,2px)  rotate(91deg) skewX(5deg) skewY(8deg) ;
-  }
-  25% {
-    -webkit-transform:  translate(285px,-49px)  rotate(114deg) skewX(7deg) skewY(10deg) ;
-  }
-  30% {
-    -webkit-transform:  translate(337px,-3px)  rotate(137deg) skewX(8deg) skewY(12deg) ;
-  }
-  35% {
-    -webkit-transform:  translate(387px,-47px)  rotate(160deg) skewX(9deg) skewY(14deg) ;
-  }
-  40% {
-    -webkit-transform:  translate(414px,-24px)  rotate(182deg) skewX(11deg) skewY(16deg) ;
-  }
-  45% {
-    -webkit-transform:  translate(441px,-1px)  rotate(205deg) skewX(12deg) skewY(18deg) ;
-  }
-  50% {
-    -webkit-transform:  translate(492px,-49px)  rotate(228deg) skewX(13deg) skewY(20deg) ;
-  }
-  65% {
-    -webkit-transform:  translate(492px,-49px)  rotate(0deg) scaleX(0.00) scaleY(0.00) skewX(0deg) skewY(26deg) ;
-  }
-  65% {
-    -webkit-transform:  translate(492px,-49px)  rotate(296deg) skewX(17deg) skewY(26deg) ;
-  }
-  79% {
-    -webkit-transform:  translate(0px,0px)  rotate(360deg) scaleY(0.00) skewX(21deg) skewY(33deg) ;
-  }
-  100% {
-    -webkit-transform:  translate(0px,0px)  rotate(360deg) scaleX(0.00) scaleY(0.00) skewX(0deg) skewY(0deg) ;
-  }
-}
-
-@-o-keyframes gwonam {
-  0% {
-    -o-transform:  translate(0px,0px)  rotate(0deg) scaleX(1.00) scaleY(0.99) skewX(0deg) skewY(0deg) ;
-  }
-  5% {
-    -o-transform:  translate(56px,-24px)  rotate(23deg) skewX(1deg) skewY(0deg) ;
-  }
-  10% {
-    -o-transform:  translate(114px,0px)  rotate(46deg) skewX(3deg) skewY(4deg) ;
-  }
-  15% {
-    -o-transform:  translate(173px,-48px)  rotate(68deg) skewX(4deg) skewY(6deg) ;
-  }
-  20% {
-    -o-transform:  translate(228px,2px)  rotate(91deg) skewX(5deg) skewY(8deg) ;
-  }
-  25% {
-    -o-transform:  translate(285px,-49px)  rotate(114deg) skewX(7deg) skewY(10deg) ;
-  }
-  30% {
-    -o-transform:  translate(337px,-3px)  rotate(137deg) skewX(8deg) skewY(12deg) ;
-  }
-  35% {
-    -o-transform:  translate(387px,-47px)  rotate(160deg) skewX(9deg) skewY(14deg) ;
-  }
-  40% {
-    -o-transform:  translate(414px,-24px)  rotate(182deg) skewX(11deg) skewY(16deg) ;
-  }
-  45% {
-    -o-transform:  translate(441px,-1px)  rotate(205deg) skewX(12deg) skewY(18deg) ;
-  }
-  50% {
-    -o-transform:  translate(492px,-49px)  rotate(228deg) skewX(13deg) skewY(20deg) ;
-  }
-  65% {
-    -o-transform:  translate(492px,-49px)  rotate(0deg) scaleX(0.00) scaleY(0.00) skewX(0deg) skewY(26deg) ;
-  }
-  65% {
-    -o-transform:  translate(492px,-49px)  rotate(296deg) skewX(17deg) skewY(26deg) ;
-  }
-  79% {
-    -o-transform:  translate(0px,0px)  rotate(360deg) scaleY(0.00) skewX(21deg) skewY(33deg) ;
-  }
-  100% {
-    -o-transform:  translate(0px,0px)  rotate(360deg) scaleX(0.00) scaleY(0.00) skewX(0deg) skewY(0deg) ;
-  }
-}
-
-@-ms-keyframes gwonam {
-  0% {
-    -ms-transform:  translate(0px,0px)  rotate(0deg) scaleX(1.00) scaleY(0.99) skewX(0deg) skewY(0deg) ;
-  }
-  5% {
-    -ms-transform:  translate(56px,-24px)  rotate(23deg) skewX(1deg) skewY(0deg) ;
-  }
-  10% {
-    -ms-transform:  translate(114px,0px)  rotate(46deg) skewX(3deg) skewY(4deg) ;
-  }
-  15% {
-    -ms-transform:  translate(173px,-48px)  rotate(68deg) skewX(4deg) skewY(6deg) ;
-  }
-  20% {
-    -ms-transform:  translate(228px,2px)  rotate(91deg) skewX(5deg) skewY(8deg) ;
-  }
-  25% {
-    -ms-transform:  translate(285px,-49px)  rotate(114deg) skewX(7deg) skewY(10deg) ;
-  }
-  30% {
-    -ms-transform:  translate(337px,-3px)  rotate(137deg) skewX(8deg) skewY(12deg) ;
-  }
-  35% {
-    -ms-transform:  translate(387px,-47px)  rotate(160deg) skewX(9deg) skewY(14deg) ;
-  }
-  40% {
-    -ms-transform:  translate(414px,-24px)  rotate(182deg) skewX(11deg) skewY(16deg) ;
-  }
-  45% {
-    -ms-transform:  translate(441px,-1px)  rotate(205deg) skewX(12deg) skewY(18deg) ;
-  }
-  50% {
-    -ms-transform:  translate(492px,-49px)  rotate(228deg) skewX(13deg) skewY(20deg) ;
-  }
-  65% {
-    -ms-transform:  translate(492px,-49px)  rotate(0deg) scaleX(0.00) scaleY(0.00) skewX(0deg) skewY(26deg) ;
-  }
-  65% {
-    -ms-transform:  translate(492px,-49px)  rotate(296deg) skewX(17deg) skewY(26deg) ;
-  }
-  79% {
-    -ms-transform:  translate(0px,0px)  rotate(360deg) scaleY(0.00) skewX(21deg) skewY(33deg) ;
-  }
-  100% {
-    -ms-transform:  translate(0px,0px)  rotate(360deg) scaleX(0.00) scaleY(0.00) skewX(0deg) skewY(0deg) ;
-  }
+#MainGwonam {
+  position: absolute;
+  display: block;
+  z-index: 5;
+  -webkit-filter: drop-shadow(5px 2px 5px black);
+  filter: drop-shadow(5px 2px 5px black);
 }
